--- a/frontend/src/Components/FlashSale/FlashSale.css
+++ b/frontend/src/Components/FlashSale/FlashSale.css
@@ -3,7 +3,7 @@
     background: linear-gradient(135deg, #fff7ed 0%, #ffedd5 100%);
   }
   
-  .flash-sale-header {
+  .flash-sale-header1 {
     display: flex;
     justify-content: space-between;
     align-items: center;
