--- a/frontend/src/Admin/Components/AdminSidebar/AdminSidebar.css
+++ b/frontend/src/Admin/Components/AdminSidebar/AdminSidebar.css
@@ -85,6 +85,7 @@
 .AdminSidebar-link.active {
   background-color: rgba(255, 255, 255, 0.2);
   color: white;
+  pointer-events: none;
 }
 
 @media (min-width: 1024px) {
